subscriber modules added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,21 @@ spring.datasource.username=root
 spring.datasource.password=Mysql123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.kafka.bootstrapServers=172.20.47.194:9092
+spring.cloud.function.definition=subscription;retrieve;subscribeNotification
+spring.cloud.stream.function.definition=subscription;retrieve;subscribeNotification
+spring.cloud.stream.bindings.subscription-out-0.destination=subscription
+spring.cloud.stream.kafka.bindings.subscription-out-0.producer.configuration.key.serializer=org.apache.kafka.common.serialization.LongSerializer
+
+
+#retrieve
+spring.cloud.stream.bindings.retrieve-in-0.destination=subscription
+spring.cloud.stream.kafka.streams.binder.functions.retrieve.applicationId=video-hosting
+spring.cloud.stream.kafka.streams.binder.configuration.spring.json.trusted.packages=*
+
+#subscriptionNotification
+spring.cloud.stream.bindings.subscribeNotification-in-0.destination=subscription
+spring.cloud.stream.bindings.subscribeNotification-out-0.destination=subscribeNotification
+spring.cloud.stream.kafka.bindings.subscribeNotification-out-0.producer.configuration.key.serializer=org.apache.kafka.common.serialization.LongSerializer
+spring.cloud.stream.kafka.streams.binder.functions.subscribeNotification.applicationId=delivery-count
