--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=video-hosting
-spring.datasource.url=jdbc:mysql://localhost:3306/video_hosting
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.password=scooby
+spring.datasource.url=jdbc:h2:mem:video_hosting
 spring.datasource.username=root
-spring.datasource.password=Mysql123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.kafka.bootstrapServers=172.20.47.194:9092
+
+spring.kafka.bootstrapServers=localhost:9092
 spring.cloud.function.definition=subscription;retrieve;subscribeNotification
 spring.cloud.stream.function.definition=subscription;retrieve;subscribeNotification
 spring.cloud.stream.bindings.subscription-out-0.destination=subscription
@@ -21,4 +25,4 @@ spring.cloud.stream.kafka.streams.binder.configuration.spring.json.trusted.packa
 spring.cloud.stream.bindings.subscribeNotification-in-0.destination=subscription
 spring.cloud.stream.bindings.subscribeNotification-out-0.destination=subscribeNotification
 spring.cloud.stream.kafka.bindings.subscribeNotification-out-0.producer.configuration.key.serializer=org.apache.kafka.common.serialization.LongSerializer
-spring.cloud.stream.kafka.streams.binder.functions.subscribeNotification.applicationId=delivery-count
+spring.cloud.stream.kafka.streams.binder.functions.subscribeNotification.applicationId=subscription
